@@ -1,4 +1,4 @@
-GRANT SELECT, INSERT, UPDATE, DELETE ON *.* TO 'cultibox'@'localhost' IDENTIFIED BY PASSWORD '*2BE655759B9F4AC14417E5D82AD6812E7C748EA8';
+GRANT SELECT, INSERT, UPDATE, DELETE, DROP, LOCK TABLES, FILE ON *.* TO 'cultibox'@'localhost' IDENTIFIED BY PASSWORD '*2BE655759B9F4AC14417E5D82AD6812E7C748EA8';
 
-GRANT SELECT, INSERT, UPDATE ON `cultibox`.* TO 'cultibox'@'localhost';
+GRANT SELECT, INSERT, UPDATE, DROP ON `cultibox`.* TO 'cultibox'@'localhost';
 
