@@ -1785,4 +1785,84 @@ function check_sd_card($sd="") {
 }
 // }}}
 
+
+// {{{  getmicrotime()()
+// ROLE    send a time to compute page loading
+//  IN     none
+// RET     time elapsed 
+/* USAGE
+    $debut = getmicrotime();
+    $fin = getmicrotime();
+    echo "Page générée en ".round($fin-$debut, 3) ." secondes.<br />";
+*/
+function getmicrotime(){
+    list($usec, $sec) = explode(" ",microtime());
+    return ((float)$usec + (float)$sec);
+}
+// }}}
+
+
+
+// {{{  convert_SIZE()()
+// ROLE    convert octet into kB,MB,GB
+//  IN     size to be converted
+// RET     size converted 
+function convert_SIZE($size)
+{
+    $unite = array('B','kB','MB','GB');
+    return @round($size/pow(1024,($i=floor(log($size,1024)))),2).' '.$unite[$i];
+}
+// }}}
+
+
+// {{{  aff_variables()()
+// ROLE    display all variables used and its memory
+//  IN     none
+// RET     none
+function aff_variables()
+{
+   echo '<br/>';
+   global $datas ;
+   foreach($GLOBALS as $Key => $Val)
+   {
+      if ($Key != 'GLOBALS')
+      {   
+         echo' <br/>'. $Key .' &asymp; '.sizeofvar( $Val );
+      }
+   }
+    echo' <br/>';
+}
+// }}}
+
+
+//{{{  Same as aff_variables but for a single variable
+function sizeofvar($var)
+{
+
+  $start_memory = memory_get_usage();   
+  $temp =unserialize(serialize($var ));   
+  $taille = memory_get_usage() - $start_memory;
+  return convert_SIZE($taille) ;
+}
+// }}}
+
+
+// {{{  memory_stat()()
+// ROLE    display memory usage for a PHP script
+//  IN     none
+// RET     none
+function memory_stat()
+{
+   echo  'Mémoire -- Utilisé : '. convert_SIZE(memory_get_usage(false)) .
+   ' || Alloué : '.
+   convert_SIZE(memory_get_usage(true)) .
+   ' || MAX Utilisé  : '.
+   convert_SIZE(memory_get_peak_usage(false)).
+   ' || MAX Alloué  : '.
+   convert_SIZE(memory_get_peak_usage(true)).
+   ' || MAX autorisé : '.
+   ini_get('memory_limit') ;  ;
+}
+
+
 ?>
