@@ -3,6 +3,9 @@
 if (!isset($_SESSION)) {
    session_start();
 }
+// Compute page time loading for debug option
+$start_load = getmicrotime();
+
 
 
 /* Libraries requiered: 
@@ -347,5 +350,17 @@ if(strcmp("$update","True")==0) {
 
 //Display the cost template
 include('main/templates/cost.html');
+
+//Compute time loading for debug option
+$end_load = getmicrotime();
+
+if($GLOBALS['DEBUG_TRACE']) {
+    echo __('GENERATE_TIME').": ".round($end_load-$start_load, 3) ." s.<br />";
+    echo "---------------------------------------";
+    aff_variables();
+    echo "---------------------------------------<br />";
+    memory_stat();
+}
+
 
 ?>
