@@ -5,6 +5,10 @@ if (!isset($_SESSION)) {
 	session_start();
 }
 
+// Compute page time loading for debug option
+$start_load = getmicrotime();
+
+
 /* Libraries requiered: 
         db_common.php : manage database requests
         utilfunc.php  : manage variables and files manipulations
@@ -158,5 +162,17 @@ if(strcmp("$update","True")==0) {
 
 //Display the welcome template
 include('main/templates/welcome.html');
+
+//Compute time loading for debug option
+$end_load = getmicrotime();
+
+if($GLOBALS['DEBUG_TRACE']) {
+    echo __('GENERATE_TIME').": ".round($end_load-$start_load, 3) ." s.<br />";
+    echo "---------------------------------------";
+    aff_variables();
+    echo "---------------------------------------<br />";
+    memory_stat();
+}
+
 
 ?>
