@@ -51,7 +51,7 @@ function(){
     <div class="text_info"><?php echo __('WELCOME_TUTO'); ?>:<br /><?php echo __('WELCOME_REQUIEREMENT'); ?></div>
     <br />
     <p class="text_info"><?php echo __('WELCOME_FOLLOW_LINK'); ?>:</p>
-<form action="<?php echo($_SERVER['PHP_SELF'])."/wizard-".$_SESSION['SHORTLANG']; ?>" method="post"><p class="p_center"><input type="submit" name="go_wizard" value="<?php echo __('WELCOME_WIZARD'); ?>"></p></form>
+<form action="<?php echo($_SERVER['PHP_SELF'])."wizard-".$_SESSION['SHORTLANG']; ?>" method="post"><p class="p_center"><input type="submit" name="go_wizard" value="<?php echo __('WELCOME_WIZARD'); ?>"></p></form>
 <?php } else { ?>
 <hr />
 <br />
